fix navbar burger menu alignment to right

--- a/onboarding/static/onboarding/style.css
+++ b/onboarding/static/onboarding/style.css
@@ -70,7 +70,7 @@ body {
 
 /* Navbar burger for mobile */
 .navbar-burger {
-    margin-right: auto;
+    margin-left: auto;
 }
 
 /* Fix Bulma navbar height issue */
